// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nodes/ChunkNode styling adds border 1`] = `
"┌───────────┐
│Hello world│
└───────────┘"
`;

exports[`nodes/ChunkNode styling adds border 2`] = `
"╔═══════════╗
║Hello world║
╚═══════════╝"
`;

exports[`nodes/ChunkNode styling adds border 3`] = `"Hello world"`;

exports[`nodes/ChunkNode styling adds border 4`] = `
"[38;5;196m┌───────────┐[39m
[38;5;196m│[39mHello world[38;5;196m│[39m
[38;5;196m└───────────┘[39m"
`;

exports[`nodes/ChunkNode styling adds border 5`] = `
"[38;5;196m[48;5;21m┌───────────┐[49m[39m
[48;5;21m[38;5;196m│[39mHello world[38;5;196m│[39m[49m
[38;5;196m[48;5;21m└───────────┘[49m[39m"
`;

exports[`nodes/ChunkNode styling adds border 6`] = `
"┌─────────────┐
│Hello world  │
└─────────────┘"
`;

exports[`nodes/ChunkNode styling adds border 7`] = `
"┌─────────────┐
│Hello world  │
│             │
└─────────────┘"
`;

exports[`nodes/ChunkNode styling adds border 8`] = `
"┌─────────────┐
│Hello        │
└─────────────┘"
`;

exports[`nodes/ChunkNode styling respects color and background color 1`] = `"[35m[46mHello world[49m[39m"`;

exports[`nodes/ChunkNode styling respects fontStyle 1`] = `"[3mHello world[23m"`;

exports[`nodes/ChunkNode styling respects fontStyle 2`] = `"Hello world"`;

exports[`nodes/ChunkNode styling respects fontWeight 1`] = `"[1mHello world[22m"`;

exports[`nodes/ChunkNode styling respects fontWeight 2`] = `"Hello world"`;

exports[`nodes/ChunkNode styling respects textDecoration 1`] = `"[4mHello world[24m"`;

exports[`nodes/ChunkNode styling respects textDecoration 2`] = `"[9mHello world[29m"`;

exports[`nodes/ChunkNode styling respects textDecoration 3`] = `"Hello world"`;

exports[`nodes/ChunkNode styling respects textTransform 1`] = `"Hello World"`;

exports[`nodes/ChunkNode styling respects textTransform 2`] = `"HELLO WORLD"`;

exports[`nodes/ChunkNode styling respects textTransform 3`] = `"hello world"`;

exports[`nodes/ChunkNode styling respects textTransform 4`] = `"Hello world"`;

exports[`nodes/ChunkNode styling respects visibility 1`] = `"Hello world"`;

exports[`nodes/ChunkNode styling respects visibility 2`] = `"[8mHello world[28m"`;
